Fixed issues with fun fact covering

--- a/homework/Homework-1/flask_app/static/main/css/main.css
+++ b/homework/Homework-1/flask_app/static/main/css/main.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    text-align: justify;
+    text-justify: inter-word;
     min-height: 80vh;
     width: 100vw;
     max-width: 100%;
@@ -14,9 +15,11 @@
 .about {
     display: flex;
     flex-direction: row;
-    
+    max-height: 50vh;
     width: 80vw;
     gap: 20px;
+    padding-top: 10%;
+
 
 }
 
@@ -33,6 +36,7 @@
     height: auto;
 
 
+
 }
 
 #personal-pic {
@@ -42,8 +46,9 @@
 
 .fun-fact {
     width: 100%;
-    text-align: center;
-    text-justify: center;
+    align-items: center;
+    text-align: justify;
+    text-justify: inter-word;
     margin-top: 20;
     
 }
@@ -53,7 +58,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start; 
+    text-align: justify;
+    text-justify: inter-word;
     height: auto; 
     width: 100vw;
     max-width: 100%;
@@ -87,7 +93,7 @@
 
         flex-direction: column;
         min-height: auto;
-        height: auto;
+        max-height: none;
   
     }
 
@@ -100,13 +106,15 @@
 
     .personal-description {
         overflow-y: visible;
- 
     }
+
+    
+    .personal-photo {
+        padding-top: 10%;
+    }
+   
 
     .fun-fact {
         padding-bottom: 10%;
     }
-
-    
-
 }
